# tetripin

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.rst  dev-requirements.txt  dodo.py  pyproject.toml  requirements.txt  setup.py  tetripin.py
src/tetripin/: __main__.py  cli.py  codes.tcss  exceptions.py  test.py  tetripin.py  tui.py  utils.py
